# intuitR

./: CHANGELOG.md  LICENSE  README.md  d.txt  intuitR.cabal
intuitT/: LICENSE  README.md  intuitT.cabal
intuitT/example/: trace_chi.txt
intuitT/examples/: trace_psi.txt
intuitT/src/: Clausify.hs  IntuitT.hs  ParseProblem.hs  Parsek.hs  Prover.hs  Types.hs  Utility.hs  WriteLatex.hs  WriteMakeFile.hs  WriteModelGraphviz.hs
script/: Run.hs  analyze_data.sh  build_report.sh  generate_IntHistGC_benchmarks.sh  generate_fCube_benchmarks.sh  run_benchmarks.sh
src/: IntuitR.hs  ParseProblem.hs  Parsek.hs  Prover.hs  Types.hs  Utility.hs  WriteLatex.hs  WriteMakeFile.hs  WriteModelGraphviz.hs
timings/: fCube_600_  intHistGC_600_  intuitR_600_  intuit_600_  report.txt
