name:                intuitT
version:             0.1
cabal-version:       >= 2.0
                     
synopsis: intuit with Trace
-- description:
license:             BSD3
license-file:        LICENSE
author:              Camillo Fiorentini
maintainer:          fiorentini@di.unimi.it
-- copyright:
category:            Theorem Prover
build-type:          Simple
extra-source-files:  README.md


executable intuitT
  main-is:             IntuitT.hs
  other-modules: Clausify,
                 ParseProblem,
                 Parsek,
                 Prover,
                 Types,
                 Utility,
                 WriteLatex,
                 WriteMakeFile,
                 WriteModelGraphviz


  other-extensions:    TypeOperators, RankNTypes
  build-depends:       base >=4.9 && <5,
                       minisat,
                       containers >=0.4,
                       directory,
                       filepath,
                       unix,
                       mtl,
                       partial-order,
                       raw-strings-qq
  hs-source-dirs:      src
  default-language:    Haskell2010
